examples/test/testpolicy18032.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18032
  namespace: namespace438
spec:
  podSelector:
    matchLabels:
      key13: value2
      key27: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value2
          key43: value19
          key5: value47
      podSelector:
        matchLabels:
          key4: value25
